--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -2,8 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: guestbook-ui
+  annotations:
+    service.protal.kubernetes.io/type: LoadBalancer
+    kubernetes.io/elb.class: union
+    kubernetes.io/elb.subnet-id: 56c62d85-5229-4c57-83a7-c2998535a88d
+    kubernetes.io/elb.autocreate: >-
+      {"type":"public","bandwidth_name":"cce-bandwidth-nginx","bandwidth_chargemode":"traffic","bandwidth_size":5,"bandwidth_sharetype":"PER","eip_type":"5_bgp"}
 spec:
-  ports:
+  type: 
+  ports: LoadBalancer
   - port: 80
     targetPort: 80
   selector:
