--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -9,8 +9,8 @@ metadata:
     kubernetes.io/elb.autocreate: >-
       {"type":"public","bandwidth_name":"cce-bandwidth-nginx","bandwidth_chargemode":"traffic","bandwidth_size":5,"bandwidth_sharetype":"PER","eip_type":"5_bgp"}
 spec:
-  type: 
-  ports: LoadBalancer
+  type: LoadBalancer
+  ports:
   - port: 80
     targetPort: 80
   selector:
